--- a/index.html
+++ b/index.html
@@ -14,24 +14,22 @@
       <form>
         <input id="inputText" type="text" />
         <button id="addBtn" type="submit">Add</button>
+        <button id="sortBtn">
+          <img id="sort-img" src="https://img.icons8.com/?size=100&id=21892&format=png&color=000000" alt="">
+        </button>
+
       </form>
+      <p id="warning">Please type something</p>
       <ul id="todo-list-container">
-        <!-- <button>
-          <img src="https://img.icons8.com/?size=100&id=42799&format=png&color=000000" alt="">
-        </button> -->
-        <!-- <button>
-          <img src="https://img.icons8.com/?size=100&id=VccK6AI5MWVi&format=png&color=000000" alt="">
-        </button> -->
-        <!-- <button>
-          <img src="https://img.icons8.com/?size=100&id=104338&format=png&color=000000" alt="">
-        </button> -->
-
         <!-- <li>
-          <input type='checkbox'><input>
+          <input type="checkbox" />
+          <label htmlFor="">inputText.value</label>
+          <div class='imgBtnContainer'>
+            <img id='editBtn' src="" alt="" />
+            <img id='deleteBtn' src="" alt="" />
+          </div>
+        </li>  -->
 
-        </li> -->
-        <!-- <li></li> -->
-        <!-- <li></li> -->
       </ul>
     </div>
   </div>
