third commit made responsive, added prepend function when list is reversed, added reset button

--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
         <input id="inputText" type="text" />
         <button id="addBtn" type="submit">Add</button>
         <button id="sortBtn">
-          <img id="sort-img" src="https://img.icons8.com/?size=100&id=21892&format=png&color=000000" alt="">
+          <img id="sort-img" src="https://img.icons8.com/?size=100&id=21892&format=png&color=000000" alt="sort icon">
         </button>
-
+        <button id="resetBtn">
+          <img id="reset-img" src="https://img.icons8.com/?size=100&id=K2njhUKeLfle&format=png&color=000000" alt="reset icon">
+        </button>
       </form>
       <p id="warning">Please type something</p>
       <ul id="todo-list-container">
