--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
       <form>
         <input id="inputText" type="text" />
         <button id="addBtn" type="submit">Add</button>
-        <button id="sortBtn">
+        <button id="sortBtn" data-tooltip="Sort">
           <img id="sort-img" src="https://img.icons8.com/?size=100&id=21892&format=png&color=000000" alt="sort icon">
         </button>
-        <button id="resetBtn">
+
+
+        <button id="resetBtn" data-tooltip="Delete All">
           <img id="reset-img" src="https://img.icons8.com/?size=100&id=K2njhUKeLfle&format=png&color=000000" alt="reset icon">
         </button>
       </form>
@@ -25,18 +27,19 @@
       <ul id="todo-list-container">
         <!-- <li>
           <input type="checkbox" />
-          <label htmlFor="">inputText.value</label>
+          <label>inputText.value</label>
           <div class='imgBtnContainer'>
             <img id='editBtn' src="" alt="" />
             <img id='deleteBtn' src="" alt="" />
           </div>
         </li>  -->
-
       </ul>
     </div>
   </div>
   <footer>
     <small>
+      <a target="_blank" href="https://icons8.com/icon/21892/sorting-arrows">Sort</a>,
+      <a target="_blank" href="https://icons8.com/icon/K2njhUKeLfle/reset">Reset</a>,
       <a target="_blank" href="https://icons8.com/icon/42799/edit">Edit</a> and
       <a target="_blank" href="https://icons8.com/icon/104338/delete">Delete</a>
       icon by <a target="_blank" href="https://icons8.com">Icons8</a>
@@ -45,5 +48,3 @@
   <script src="main.js"></script>
 </body>
 </html>
-
-<!-- <a target="_blank" href="https://icons8.com/icon/42799/edit">Edit</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a> -->
